objects/IdMatrix_Analysis_Result__c.object
<CustomObject>
    <fields>
        <fullName>Address_Match__c</fullName>
        <label>Address Match</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filtered_Score__c</fullName>
        <label>Filtered Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Value__c</fullName>
        <label>Minimum Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Match__c</fullName>
        <label>Name Match</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <label>Points</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raw_Score__c</fullName>
        <label>Raw Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Name__c</fullName>
        <label>Search Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veda_IdMatrix__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda IdMatrix</label>
        <referenceTo>Veda_IdMatrix__c</referenceTo>
        <relationshipLabel>IdMatrix Analysis Results</relationshipLabel>
        <relationshipName>IdMatrix_Analysis_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dateofbirth__c</fullName>
        <label>dateofbirth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>documentIdentifierMatch__c</fullName>
        <label>documentIdentifierMatch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IdMatrix Analysis Result</label>
    <nameField>
        <label>Analysis Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IdMatrix Analysis Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>